<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff0"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffff0"
        android:orientation="vertical"
        app:layout_anchorGravity="left|bottom">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#191970"
                android:onClick="onBackMonthButtonClick"
                android:text="@string/btn_back_month"
                android:textColor="#fffff0"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCalTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#191970"
                android:onClick="onNextMonthButtonClick"
                android:text="@string/btn_next_month"
                android:textColor="#fffff0"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#ff69b4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name07"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#696969"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name01"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#696969"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name02"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#696969"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name03"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#696969"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name04"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#696969"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name05"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="#4682b4"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/week_name06"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <GridView
                android:id="@+id/calendarGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:horizontalSpacing="1dp"
                android:numColumns="7"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dp"></GridView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvClickDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="25sp" />

            <ListView
                android:id="@+id/lvTasksList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnNew"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="5dp"
        android:onClick="onNewButtonClick"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/background_light"
        app:backgroundTint="#ff4081"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>


